compiler-tests/src/test/data/diagnostic/functioninject/CannotBeScoped.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
<!FUNCTION_INJECT_ERROR!>@SingleIn(AppScope::class)<!>
@Inject
fun Example() {

}
